# houduan

./: .env  .gitignore  add_missing_buildings.py  add_missing_card.py  buildings.db  check_buildings.py  check_db.py  check_images_simple.py  confirm_deepseek.py  final_verify.py  generate_knowledge_cards.py  generate_new_knowledge_cards.py  init_building_data.py  init_knowledge_data.py  main.py  optimize_knowledge_cards.py  optimize_new_cards.py  pyproject.toml  railway.json  requirements.txt  start.sh  test_ai_endpoint.py  test_ai_format.py  test_api.py  test_deepseek_api.py  test_updated_ai.py  test_zhipu_api.py  update_chuandou.py  update_images.py  verify_deepseek.py  verify_images.py  verify_new_cards.py  verify_optimization.py
app/: models.py
app/api/: routes.py
app/services/: ai_service.py
config/: config.py
